--- a/index.html
+++ b/index.html
@@ -51,27 +51,12 @@
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"><a class="nav-link link-scroll active" href="#">Home <span
                 class="sr-only"></span></a></li>
-          <li class="nav-item"><a class="nav-link link-scroll" href="course.html">Courses</a></li>
-          <li class="nav-item"><a class="nav-link link-scroll mr-2" href="coding.html">Coding for Kids</a></li>
-          <li class="nav-item"><a class="nav-link link-scroll mr-2" href="tutor.html">Become a tutor</a></li>
-
-          <div class="dropdown nav-item">
-            <a class="dropdown-toggle nav-link" href="study.html/" role="button" id="dropdownMenuLink" data-toggle="dropdown"
-              aria-haspopup="true" aria-expanded="false">
-              Study Material
-            </a>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-              <a class="dropdown-item" href="#">NCERT Solutions</a>
-              <a class="dropdown-item" href="#">CBSE</a>
-              <a class="dropdown-item" href="#">ICSE</a>
-              <a class="dropdown-item" href="#">State Boards</a>
-              <a class="dropdown-item" href="#">Competitive Exams</a>
-              <a class="dropdown-item" href="#">Course For Kids</a>
-              <a class="dropdown-item" href="#">All India Test</a>
-              <a class="dropdown-item" href="#">Quizes</a>
-
-            </div>
-          </div>
+          <li class="nav-item"><a class="nav-link link-scroll" href="course.html">Projects</a></li>
+          <li class="nav-item"><a class="nav-link link-scroll mr-2" href="coding.html">Leaderboard</a></li>
+          <li class="nav-item"><a class="nav-link link-scroll mr-2" href="tutor.html">Internship</a></li>
+          <li class="nav-item"><a class="nav-link link-scroll mr-2" href="tutor.html">Training</a></li>
+          <li class="nav-item"><a class="nav-link link-scroll mr-2" href="tutor.html">Team</a></li>
+          <li class="nav-item"><a class="nav-link link-scroll mr-2" href="tutor.html">Contact</a></li>
 
           <div class="dropdown nav-item">
             <a class="dropdown-toggle nav-link" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
@@ -80,11 +65,8 @@
             </a>
 
             <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-              <a class="dropdown-item" href="/about.html">About Vidyayan</a>
-
-              <a class="dropdown-item" href="#">Child Safety</a>
-              <a class="dropdown-item" href="#">Our Result</a>
-              <a class="dropdown-item" href="#">Our Testimonials</a>
+              <a class="dropdown-item" href="/about.html">About VSoC</a>
+              <a class="dropdown-item" href="/about.html">Campus Ambessdor</a>
               <a class="dropdown-item" href="#">Careers</a>
               <a class="dropdown-item" href="#">Our Blog</a>
               <a class="dropdown-item" href="#">Terms & Conditions</a>
