--- a/course.html
+++ b/course.html
@@ -34,40 +34,25 @@
 <body>
     <!-- navbar-->
     <header class="header">
-        <nav class="navbar navbar-expand-lg fixed-top">
-            <nav class="navbar-white bg-gray">
-                <div class="container">
-                    <span class="navbar-brand mb-0 h2"><span style="color:#f17c1d; font-weight-bold;">Vidyayan</span>
-                </div>
-            </nav>
-            <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse"
-                data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation"><i class="fas fa-bars"></i></button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ml-auto">
-          <li class="nav-item"><a class="nav-link link-scroll" href="index.html">Home <span
+    <nav class="navbar navbar-expand-lg fixed-top">
+      <nav class="navbar-white bg-gray">
+        <div class="container">
+          <span class="navbar-brand mb-0 h2"><span style="color:#f17c1d; font-weight: bold;"><a href="#">Vidyayan</a></span>
+        </div>
+      </nav>
+      <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse"
+        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+        aria-label="Toggle navigation"><i class="fas fa-bars"></i></button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item"><a class="nav-link link-scroll active" href="#">Home <span
                 class="sr-only"></span></a></li>
-          <li class="nav-item"><a class="nav-link link-scroll active" href="course.html">Courses</a></li>
-          <li class="nav-item"><a class="nav-link link-scroll mr-2" href="coding.html">Coding for Kids</a></li>
-          <li class="nav-item"><a class="nav-link link-scroll mr-2" href="tutor.html">Become a tutor</a></li>
-
-          <div class="dropdown nav-item">
-            <a class="dropdown-toggle nav-link" href="study.html/" role="button" id="dropdownMenuLink" data-toggle="dropdown"
-              aria-haspopup="true" aria-expanded="false">
-              Study Material
-            </a>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-              <a class="dropdown-item" href="#">NCERT Solutions</a>
-              <a class="dropdown-item" href="#">CBSE</a>
-              <a class="dropdown-item" href="#">ICSE</a>
-              <a class="dropdown-item" href="#">State Boards</a>
-              <a class="dropdown-item" href="#">Competitive Exams</a>
-              <a class="dropdown-item" href="#">Course For Kids</a>
-              <a class="dropdown-item" href="#">All India Test</a>
-              <a class="dropdown-item" href="#">Quizes</a>
-
-            </div>
-          </div>
+          <li class="nav-item"><a class="nav-link link-scroll" href="course.html">Projects</a></li>
+          <li class="nav-item"><a class="nav-link link-scroll mr-2" href="coding.html">Leaderboard</a></li>
+          <li class="nav-item"><a class="nav-link link-scroll mr-2" href="tutor.html">Internship</a></li>
+          <li class="nav-item"><a class="nav-link link-scroll mr-2" href="tutor.html">Training</a></li>
+          <li class="nav-item"><a class="nav-link link-scroll mr-2" href="tutor.html">Team</a></li>
+          <li class="nav-item"><a class="nav-link link-scroll mr-2" href="tutor.html">Contact</a></li>
 
           <div class="dropdown nav-item">
             <a class="dropdown-toggle nav-link" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
@@ -76,11 +61,8 @@
             </a>
 
             <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-              <a class="dropdown-item" href="about.html">About Vidyayan</a>
-
-              <a class="dropdown-item" href="#">Child Safety</a>
-              <a class="dropdown-item" href="#">Our Result</a>
-              <a class="dropdown-item" href="#">Our Testimonials</a>
+              <a class="dropdown-item" href="/about.html">About VSoC</a>
+              <a class="dropdown-item" href="/about.html">Campus Ambessdor</a>
               <a class="dropdown-item" href="#">Careers</a>
               <a class="dropdown-item" href="#">Our Blog</a>
               <a class="dropdown-item" href="#">Terms & Conditions</a>
@@ -92,9 +74,10 @@
           <li class="btn "><a id="sign-up" class="link-scroll mr-2 py-2 px-3" href="#">Signin</a></li>
 
         </ul>
-            </div>
-            </div>
-        </nav>
+      </div>
+      </div>
+    </nav>
+  </header>
     </header>
     <section class="bg-center py-12" id="about"
         style="background: url(img/service-bg.svg) no-repeat; background-size: cover">
