--- a/course.html
+++ b/course.html
@@ -45,9 +45,9 @@
         aria-label="Toggle navigation"><i class="fas fa-bars"></i></button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item"><a class="nav-link link-scroll active" href="#">Home <span
+          <li class="nav-item"><a class="nav-link link-scroll " href="#">Home <span
                 class="sr-only"></span></a></li>
-          <li class="nav-item"><a class="nav-link link-scroll" href="course.html">Projects</a></li>
+          <li class="nav-item"><a class="nav-link link-scroll active" href="course.html">Projects</a></li>
           <li class="nav-item"><a class="nav-link link-scroll mr-2" href="coding.html">Leaderboard</a></li>
           <li class="nav-item"><a class="nav-link link-scroll mr-2" href="tutor.html">Internship</a></li>
           <li class="nav-item"><a class="nav-link link-scroll mr-2" href="tutor.html">Training</a></li>
