--- a/about.html
+++ b/about.html
@@ -90,8 +90,7 @@
                 <div class="col-lg-6">
                     <h2>The Best Teachers now on your Fingertips</h2>
                     <p class="text-muted">Vidyayan provides you best teachers. We will give you direction for smart
-                        learning.
-                        Let's progress together.</p>
+                        learning.Let's progress together</p>
                     <a class="btn btn-outline-dark" href="https://forms.gle/Znh3fZasXjwnMRm2A" role="button">Join as a
                         Tutor</a>
                     <a class="btn btn-outline-dark" href="https://forms.gle/Zz7f7epQdmjs85Bo9" role="button">Find Me a
