--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 
       <!--uper wala yahi tak -->
 
-      <!-- ELIGIBILITY section -->
+      <!-- ELIGIBILITY section 
       <section id="eligibility">
         <div class="container">
           <div class="row">
@@ -281,7 +281,7 @@
           </div>
         </div>
         <img class="section-back-icon" src="images/icons/diversity.svg">
-      </section>
+      </section>-->
 
       <!-- HOW DOES IT WORK section -->
       <section id="how-does-it-work">
