Main logo updated

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     <nav class="navbar navbar-expand-lg fixed-top">
       <nav class="navbar-white bg-gray">
         <div class="container">
-          <span class="navbar-brand mb-0 h2"><span style="color:#f37004; font-weight: bold;"><a
-                href="#"><h2>VSoC</h2></a></span>
+          <span class="navbar-brand mb-0 h2"><!--<span style="color:#f37004; font-weight: bold;"><a
+                href="#"><h2>VSoC</h2></a></span>--><img src="main_logo.png">
         </div>
       </nav>
       <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse"
