Team page,Internship page Done

--- a/training.html
+++ b/training.html
@@ -46,7 +46,7 @@
                 aria-label="Toggle navigation"><i class="fas fa-bars"></i></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link link-scroll" href="#">Home <span class="sr-only"></span></a>
+                    <li class="nav-item"><a class="nav-link link-scroll" href="index.html">Home <span class="sr-only"></span></a>
                     </li>
                     <li class="nav-item"><a class="nav-link link-scroll" href="projects.html">Projects</a></li>
                     <li class="nav-item"><a class="nav-link link-scroll mr-2" href="leaderboard.html">Leaderboard</a>
