--- a/internship.html
+++ b/internship.html
@@ -46,7 +46,7 @@
                 aria-label="Toggle navigation"><i class="fas fa-bars"></i></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link link-scroll" href="#">Home <span class="sr-only"></span></a>
+                    <li class="nav-item"><a class="nav-link link-scroll" href="index.html">Home <span class="sr-only"></span></a>
                     </li>
                     <li class="nav-item"><a class="nav-link link-scroll" href="projects.html">Projects</a></li>
                     <li class="nav-item"><a class="nav-link link-scroll mr-2" href="leaderboard.html">Leaderboard</a>
@@ -89,7 +89,7 @@
         <div class="container">
           <div class="row py-5">
             <div class="col-lg-5 py-5">
-              <h1 class="font-weight-bold">VSoC <span style="color:#f17c1d; font-weight-bold;">Internship</span>
+              <h1 class="font-weight-bold">Vidyayan <span style="color:#f17c1d; font-weight-bold;">Internship</span>
                 Programme</h1>
               <p class="my-4 text-muted">Now, your tutor is just one step away. Personalised and 1 to 1 class with Online
                 and home tutor</p>
@@ -104,8 +104,8 @@
               
             <div class="col-lg-6 ml-auto">
               <div class="device-wrapper mx-auto">
-                <div class="device shadow" data-device="iPhoneX" data-orientation="portrait" data-color="black">
-                  <div class="screen"><img class="img-fluid" src="img/25958659.jpg" alt=""></div>
+                <div class="device " data-device="iPhoneX" data-orientation="portrait" data-color="black">
+                  <div class="screen"><img class="img-fluid" src="vip-removebg.png" alt=""></div>
                 </div>
               </div>
             </div>
@@ -119,10 +119,10 @@
 
     <section class="bg-center py-12" id="about"
         style="background: url(img/service-bg.svg) no-repeat; background-size: cover">
-        <section class="about py-0">
+        <section class="about py-">
             <div class="container">
                 <p class="h6 text-uppercase text-primary"></p>
-                <h2 class="mb-5">Why VIP ??</h2>
+                <h2 class="mb-5 text-primary">Why VIP ??</h2>
                 <div class="row pb-5">
                     <div class="col-lg-6 col-sm-6 mb-4">
                         <!-- Services Item-->
@@ -289,7 +289,7 @@
     </section>
 <!--collapsible items-->
 <hr>
-<h2 class="mb-5" id="step-to-apply">Step to Apply</h2>
+<h2 class="mb-5 text-primary" id="step-to-apply">Step to Apply</h2>
 
 
 <div id="accordion">
