step to apply div resized

--- a/internship.html
+++ b/internship.html
@@ -293,7 +293,7 @@
 
 
 <div id="accordion">
-    <div class="card">
+    <div class="card cardvip">
       <div class="card-header" id="headingOne">
         <h5 class="mb-0">
           <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -312,7 +312,7 @@
             Receive your completion certificate: 1st week of October     </div>
       </div>
     </div> <br>
-    <div class="card">
+    <div class="card cardvip">
       <div class="card-header" id="headingTwo">
         <h5 class="mb-0">
           <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
@@ -339,7 +339,7 @@
       </div>
     </div>
     <br>
-    <div class="card">
+    <div class="card cardvip">
       <div class="card-header" id="headingThree">
         <h5 class="mb-0">
           <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
@@ -354,7 +354,7 @@
     </div>
 
     <br>
-    <div class="card">
+    <div class="card  cardvip">
       <div class="card-header" id="headingThree">
         <h5 class="mb-0">
           <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
@@ -371,7 +371,7 @@
 
     <br>
 
-    <div class="card">
+    <div class="card cardvip">
       <div class="card-header" id="headingThree">
         <h5 class="mb-0">
           <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
