VIP effect added

--- a/internship.html
+++ b/internship.html
@@ -105,7 +105,7 @@
             <div class="col-lg-6 ml-auto">
               <div class="device-wrapper mx-auto">
                 <div class="device " data-device="iPhoneX" data-orientation="portrait" data-color="black">
-                  <div class="screen"><img class="img-fluid" src="vip-removebg.png" alt=""></div>
+                  <div class="screen"><img class="img-fluid" src="vip.gif" alt=""></div>
                 </div>
               </div>
             </div>
@@ -296,7 +296,7 @@
     <div class="card cardvip">
       <div class="card-header" id="headingOne">
         <h5 class="mb-0">
-          <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+          <button class="btn btn-link text-primary" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
           1. VIP Timeline and Important Date
           </button>
         </h5>
@@ -315,7 +315,7 @@
     <div class="card cardvip">
       <div class="card-header" id="headingTwo">
         <h5 class="mb-0">
-          <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+          <button class="btn btn-link collapsed text-primary" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
            2. Choose the programme
           </button>
         </h5>
@@ -342,7 +342,7 @@
     <div class="card cardvip">
       <div class="card-header" id="headingThree">
         <h5 class="mb-0">
-          <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+          <button class="btn btn-link collapsed text-primary" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
             3. Apply here
           </button>
         </h5>
@@ -357,7 +357,7 @@
     <div class="card  cardvip">
       <div class="card-header" id="headingThree">
         <h5 class="mb-0">
-          <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+          <button class="btn btn-link text-primary collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
             4. Frequently Asked Questions 
           </button>
         </h5>
@@ -374,7 +374,7 @@
     <div class="card cardvip">
       <div class="card-header" id="headingThree">
         <h5 class="mb-0">
-          <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+          <button class="btn btn-link collapsed text-primary" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
             5. Help and support
           </button>
         </h5>
