--- a/training.html
+++ b/training.html
@@ -37,8 +37,8 @@
         <nav class="navbar navbar-expand-lg fixed-top">
             <nav class="navbar-white bg-gray">
                 <div class="container">
-                    <span class="navbar-brand mb-0 h2"><span style="color:#f17c1d; font-weight: bold;"><a
-                                href="#">Vidyayan</a></span>
+                    <!-- <span class="navbar-brand mb-0 h2"><span style="color:#f17c1d; font-weight: bold;"><a
+                                href="#">Vidyayan</a></span> --><img src="main_logo.png">
                 </div>
             </nav>
             <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse"
@@ -81,6 +81,8 @@
             </div>
         </nav>
     </header>
+
+
     <section class="bg-center py-12" id="about"
         style="background: url(img/service-bg.svg) no-repeat; background-size: cover">
         <section class="about py-0">
