--- a/internship.html
+++ b/internship.html
@@ -230,7 +230,7 @@
                     <div class="col-lg-6 mb-5 mb-lg-0">
                         <h2>Start your learning with Vidyayan</h2>
                         <p class="text-muted">Vidyayan provides you number of facilities.Join us and boost up your
-                            knowledge.</p>
+                            knowledge..</p>
                         <ul class="list-check">
                             <li class="text-muted mb-2">NCERT books pdf</li>
                             <li class="text-muted mb-2">Weekly tests and quizes</li>
