--- a/internship.html
+++ b/internship.html
@@ -37,13 +37,8 @@
         <nav class="navbar navbar-expand-lg fixed-top">
             <nav class="navbar-white bg-gray">
                 <div class="container">
-<<<<<<< HEAD
-                    <!-- <span class="navbar-brand mb-0 h2"><span style="color:#f17c1d; font-weight: bold;"><a
-                                href="#">Vidyayan</a></span> --><img src="main_logo.png">
-=======
                     <span class="navbar-brand mb-0 h2"><a
                         href="#"><img src="main_logo.png"></a>
->>>>>>> dba57e00a20987c130846602bf6b86b85250c487
                 </div>
             </nav>
             <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse"
@@ -90,35 +85,8 @@
 
 
 
-    <section class="hero bg-top" id="hero"
-        style="background: url(img/banner-4.png) no-repeat; background-size: 100% 80%">
+    <section class="hero bg-top" id="hero" style="background: url(img/banner-4.png) no-repeat; background-size: 100% 80%">
         <div class="container">
-<<<<<<< HEAD
-            <div class="row py-5">
-                <div class="col-lg-5 py-5">
-                    <h1 class="font-weight-bold">VSoC <span style="color:#f17c1d; font-weight: bold;">Internship</span>
-                        Programme</h1>
-                    <p class="my-4 text-muted">Now, your tutor is just one step away. Personalised and 1 to 1 class with
-                        Online
-                        and home tutor</p>
-
-                    <div class="row">
-
-                        <button type="button" class="btn btn-primary btn-lg btn-block">Apply Now for Internship</button>
-
-                        <button type="button" class="btn btn-secondary btn-lg btn-block"><a href="#step-to-apply"
-                                style="color: #fff;"> Read Steps to Apply</a></button>
-
-                    </div>
-                </div>
-
-                <div class="col-lg-6 ml-auto">
-                    <div class="device-wrapper mx-auto">
-                        <div class="device shadow" data-device="iPhoneX" data-orientation="portrait" data-color="black">
-                            <div class="screen"><img class="img-fluid" src="img/25958659.jpg" alt=""></div>
-                        </div>
-                    </div>
-=======
           <div class="row py-5">
             <div class="col-lg-5 py-5">
               <h1 class="font-weight-bold">Vidyayan <span style="color:#f17c1d; font-weight-bold;">Internship</span>
@@ -138,11 +106,12 @@
               <div class="device-wrapper mx-auto">
                 <div class="device " data-device="iPhoneX" data-orientation="portrait" data-color="black">
                   <div class="screen"><img class="img-fluid" src="vip.gif" alt=""></div>
->>>>>>> dba57e00a20987c130846602bf6b86b85250c487
                 </div>
+              </div>
             </div>
+          </div>
         </div>
-    </section>
+      </section>
 
     <!---->
 
@@ -164,8 +133,7 @@
                                 </svg>
                                 <h2 class="h5 font-weight-normal h4 my-3">
                                     Verified Completion Certificate </h2>
-                                <p class="text-small mb-0 text-muted my-2">A verifiable completion certificate is
-                                    provided after successful completion of internship.</p>
+                                <p class="text-small mb-0 text-muted my-2">A verifiable completion certificate is provided after successful completion of  internship.</p>
                                 <a class="btn btn-outline-dark" href="#" role="button">Know More</a>
                             </div>
                         </div>
@@ -178,8 +146,7 @@
                                     <use xlink:href="#map-marker-1"> </use>
                                 </svg>
                                 <h2 class="h5 font-weight-normal h4 my-3">Opportunity to join VTP</h2>
-                                <p class="text-small mb-0 text-muted my-2">Opportunity to be a part of VTP is given to
-                                    the best candidates and they are hired on a special hiring plan.</p>
+                                <p class="text-small mb-0 text-muted my-2">Opportunity to be a part of VTP is given to the best candidates and they are hired on a special hiring plan.</p>
                                 <a class="btn btn-outline-dark" href="#" role="button">Know More</a>
                             </div>
                         </div>
@@ -192,9 +159,7 @@
                                     <use xlink:href="#sorting-1"> </use>
                                 </svg>
                                 <h3 class="h5 font-weight-normal h4 my-3">Networking Opportunity</h3>
-                                <p class="text-small mb-0 text-muted my-2">Connect with VTP members and interns from
-                                    around the world experiencing a multicultural and rare diverse working environment.
-                                </p>
+                                <p class="text-small mb-0 text-muted my-2">Connect with VTP members and interns from around the world experiencing a multicultural and rare diverse working environment.</p>
                                 <a class="btn btn-outline-dark" href="#" role="button">Know More</a>
                             </div>
                         </div>
@@ -208,8 +173,7 @@
                                     <use xlink:href="#sorting-1"> </use>
                                 </svg>
                                 <h3 class="h5 font-weight-normal h4 my-3">Recommendation Letter</h3>
-                                <p class="text-small mb-0 text-muted my-2">A verifiable recommendation letter is
-                                    provided to top performing interns based on various assessment parameters.</p>
+                                <p class="text-small mb-0 text-muted my-2">A verifiable recommendation letter is provided to top performing interns based on various assessment parameters.</p>
                                 <a class="btn btn-outline-dark" href="#" role="button">Know More</a>
                             </div>
                         </div>
@@ -223,9 +187,7 @@
                                     <use xlink:href="#sorting-1"> </use>
                                 </svg>
                                 <h3 class="h5 font-weight-normal h4 my-3">Workshops / guidance</h3>
-                                <p class="text-small mb-0 text-muted my-2">Workshops and guidance sessions are conducted
-                                    to help you improve the professional profile, interview skills and technical
-                                    expertise.</p>
+                                <p class="text-small mb-0 text-muted my-2">Workshops and guidance sessions are conducted to help you improve the professional profile, interview skills and technical expertise.</p>
                                 <a class="btn btn-outline-dark" href="#" role="button">Know More</a>
                             </div>
                         </div>
@@ -239,8 +201,7 @@
                                     <use xlink:href="#arrow-target-1"> </use>
                                 </svg>
                                 <h3 class="h5 font-weight-normal h4 my-3">Special Badges/Goodies</h3>
-                                <p class="text-small mb-0 text-muted my-2">Badges/Goodies are provided to recognize the
-                                    special contribution and performance of the interns.</p>
+                                <p class="text-small mb-0 text-muted my-2">Badges/Goodies are provided to recognize the special contribution and performance of the interns.</p>
                                 <a class="btn btn-outline-dark" href="#" role="button">Know More</a>
                             </div>
                         </div>
@@ -326,97 +287,6 @@
             </div>
         </section>
     </section>
-<<<<<<< HEAD
-    <!--collapsible items-->
-    <hr>
-    <h2 class="mb-5" id="step-to-apply">Step to Apply</h2>
-
-
-    <div id="accordion">
-        <div class="card">
-            <div class="card-header" id="headingOne">
-                <h5 class="mb-0">
-                    <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true"
-                        aria-controls="collapseOne">
-                        1. VIP Timeline and Important Date
-                    </button>
-                </h5>
-            </div>
-            <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
-                <div class="card-body">
-                    Apply before: 24th of August (11:59 PM SGT)<br>
-                    Selection email: Last week of August<br>
-                    Internship starts: 1st week of September<br>
-                    Submit your assignments: by 21st of September (11:59 PM SGT)<br>
-                    Provide your feedback: by 25th of the September (11:59 PM SGT)<br>
-                    Receive your completion certificate: 1st week of October </div>
-            </div>
-        </div> <br>
-        <div class="card">
-            <div class="card-header" id="headingTwo">
-                <h5 class="mb-0">
-                    <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo"
-                        aria-expanded="false" aria-controls="collapseTwo">
-                        2. Choose the programme
-                    </button>
-                </h5>
-            </div>
-            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-                <div class="card-body">
-                    Please refer to the below job descriptions of the open internship positions. The profile/function
-                    you select will be printed on your selection certificate.
-                    <br>
-                    <ul>
-                        <Li> Web Development</Li>
-                        <Li> Mobile App Development</Li>
-                        <Li> Data Science & Business Analytics
-                        </Li>
-                        <Li> Content Development</Li>
-                        <Li> Digital Marketing</Li>
-                        <Li> IoT and Computer Vision</Li>
-                        <Li> Campus Ambassador</Li>
-                        <Li> Talent Acquisition </Li>
-                    </ul>
-
-
-                </div>
-            </div>
-        </div>
-        <br>
-        <div class="card">
-            <div class="card-header" id="headingThree">
-                <h5 class="mb-0">
-                    <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree"
-                        aria-expanded="false" aria-controls="collapseThree">
-                        3. Apply here
-                    </button>
-                </h5>
-            </div>
-            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-                <div class="card-body">
-                    Open the interest form to select your internship function. If you want to change your internship
-                    function, just refill the interest form before the deadline. Your last response will be considered
-                    final if there are multiple submissions. You will receive a response receipt of the form after
-                    submission in your email, forward it to info@vidyayan.in without changing the subject line. </div>
-            </div>
-        </div>
-
-        <br>
-        <div class="card">
-            <div class="card-header" id="headingThree">
-                <h5 class="mb-0">
-                    <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree"
-                        aria-expanded="false" aria-controls="collapseThree">
-                        4. Frequently Asked Questions
-                    </button>
-                </h5>
-            </div>
-            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-                <div class="card-body">
-                    Please read the frequently asked questions to understand the VSoC timeline and structure.
-                </div>
-            </div>
-=======
 <!--collapsible items-->
 <hr>
 <h2 class="mb-5 text-primary" id="step-to-apply">Step to Apply</h2>
@@ -495,29 +365,12 @@
       <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
         <div class="card-body">
             Please read the frequently asked questions to understand the VSoC timeline and structure.
->>>>>>> dba57e00a20987c130846602bf6b86b85250c487
         </div>
+      </div>
+    </div>
 
-        <br>
+    <br>
 
-<<<<<<< HEAD
-        <div class="card">
-            <div class="card-header" id="headingThree">
-                <h5 class="mb-0">
-                    <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree"
-                        aria-expanded="false" aria-controls="collapseThree">
-                        5. Help and support
-                    </button>
-                </h5>
-            </div>
-            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-                <div class="card-body">
-                    Send a joining request to our LinkedIn discussion group - Vidyayan Network. It may take up to 2 days
-                    to approve your request. This group will be used for important announcements from our team, post
-                    task-related queries from interns and query resolution from mentors.
-                </div>
-            </div>
-=======
     <div class="card cardvip">
       <div class="card-header" id="headingThree">
         <h5 class="mb-0">
@@ -529,10 +382,11 @@
       <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
         <div class="card-body">
             Send a joining request to our LinkedIn discussion group - Vidyayan Network. It may take up to 2 days to approve your request. This group will be used for important announcements from our team, post task-related queries from interns and query resolution from mentors.
->>>>>>> dba57e00a20987c130846602bf6b86b85250c487
         </div>
-        <br>
+      </div>
     </div>
+<br>
+</div>
 
     <!--Extra collapsible items
 
@@ -570,8 +424,8 @@
     </div>
     -->
 
-
-    <hr>
+  
+<hr>
 
 
 
