--- a/projects.html
+++ b/projects.html
@@ -37,13 +37,8 @@
         <nav class="navbar navbar-expand-lg fixed-top">
             <nav class="navbar-white bg-gray">
                 <div class="container">
-<<<<<<< HEAD
-                    <!-- <span class="navbar-brand mb-0 h2"><span style="color:#f17c1d; font-weight: bold;"><a
-                                href="#">Vidyayan</a></span> --><img src="main_logo.png">
-=======
                     <span class="navbar-brand mb-0 h2"><a
                         href="#"><img src="main_logo.png"></a>
->>>>>>> dba57e00a20987c130846602bf6b86b85250c487
                 </div>
             </nav>
             <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse"
@@ -85,19 +80,14 @@
             </div>
         </nav>
     </header>
-    <section class="bg-center" id="about" style="background: url(img/service-bg.svg) no-repeat; background-size: cover">
-        <section class="about">
+    <section class="bg-center py-12" id="about"
+        style="background: url(img/service-bg.svg) no-repeat; background-size: cover">
+        <section class="about py-0">
             <div class="container">
                 <p class="h6 text-uppercase text-primary"></p>
-<<<<<<< HEAD
-                <h3 class="mb-2 py-5">Projects</h3>
-                <div class="row py-5">
-=======
                 <h2 class="mb-5 text-primary">Projects</h2>
                 <div class="row pb-5">
->>>>>>> dba57e00a20987c130846602bf6b86b85250c487
                     <div class="col-lg-6 col-sm-6 mb-4">
-
                         <!-- Services Item-->
                         <div class="card border-0 shadow rounded-lg text-center px-2">
                             <div class="card-body px py-5">
@@ -304,8 +294,7 @@
             <div class="container">
                 <div class="row align-items-center mb-5">
                     <div class="col-lg-6 mb-5 mb-lg-0"><img class="img-fluid w-100 px-lg-5" src="img/objects.svg"
-                            alt="">
-                    </div>
+                            alt=""></div>
                     <div class="col-lg-6">
                         <h2>The Best Teachers now on your Fingertips</h2>
                         <p class="text-muted">Vidyayan provides you best teachers. We will give you direction for smart
