--- a/about.html
+++ b/about.html
@@ -49,13 +49,13 @@
                     <li class="nav-item"><a class="nav-link link-scroll" href="#">Home <span class="sr-only"></span></a>
                     </li>
                     <li class="nav-item"><a class="nav-link link-scroll mr-2" href="projects.html">Projects</a></li>
-                    <li class="nav-item"><a class="nav-link link-scroll mr-2" href="leaderboard.html">Leaderboard</a>
+                    <!-- <li class="nav-item"><a class="nav-link link-scroll mr-2" href="leaderboard.html">Leaderboard</a> -->
                     </li>
                     <li class="nav-item"><a class="nav-link link-scroll mr-2" href="internship.html">Internship</a></li>
-                    <li class="nav-item"><a class="nav-link link-scroll mr-2" href="training.html">Training</a></li>
+                    <!-- <li class="nav-item"><a class="nav-link link-scroll mr-2" href="training.html">Training</a></li> -->
                     <li class="nav-item"><a class="nav-link link-scroll mr-2" href="team.html">Team</a></li>
                     <li class="nav-item"><a class="nav-link link-scroll mr-2" href="contact.html">Contact</a></li>
-
+                    <li class="nav-item"><a class="nav-link link-scroll mr-2" href="faqs.html">FAQs</a></li>
                     <div class="dropdown nav-item">
                         <a class="dropdown-toggle nav-link" href="#" role="button" id="dropdownMenuLink"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
