--- a/projects.html
+++ b/projects.html
@@ -49,13 +49,13 @@
                     <li class="nav-item"><a class="nav-link link-scroll" href="index.html">Home <span class="sr-only"></span></a>
                     </li>
                     <li class="nav-item"><a class="nav-link link-scroll active" href="projects.html">Projects</a></li>
-                    <li class="nav-item"><a class="nav-link link-scroll mr-2" href="leaderboard.html">Leaderboard</a>
-                    </li>
+                    <!-- <li class="nav-item"><a class="nav-link link-scroll mr-2" href="leaderboard.html">Leaderboard</a>
+                    </li> -->
                     <li class="nav-item"><a class="nav-link link-scroll mr-2" href="internship.html">Internship</a></li>
-                    <li class="nav-item"><a class="nav-link link-scroll mr-2" href="training.html">Training</a></li>
+                    <!-- <li class="nav-item"><a class="nav-link link-scroll mr-2" href="training.html">Training</a></li> -->
                     <li class="nav-item"><a class="nav-link link-scroll mr-2" href="team.html">Team</a></li>
                     <li class="nav-item"><a class="nav-link link-scroll mr-2" href="contact.html">Contact</a></li>
-
+                    <li class="nav-item"><a class="nav-link link-scroll mr-2" href="faqs.html">FAQs</a></li>
                     <div class="dropdown nav-item">
                         <a class="dropdown-toggle nav-link" href="#" role="button" id="dropdownMenuLink"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -290,7 +290,7 @@
                 </div>
             </div>
         </section>
-        <section class="with-pattern-1" id="services">
+        <!-- <section class="with-pattern-1" id="services">
             <div class="container">
                 <div class="row align-items-center mb-5">
                     <div class="col-lg-6 mb-5 mb-lg-0"><img class="img-fluid w-100 px-lg-5" src="img/objects.svg"
@@ -321,9 +321,9 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="row">
-                            <div class="col-lg-6 col-sm-6 mb-4">
+                            <div class="col-lg-6 col-sm-6 mb-4"> -->
                                 <!-- Services Item-->
-                                <div class="card border-0 shadow rounded-lg text-left px-2">
+                                <!-- <div class="card border-0 shadow rounded-lg text-left px-2">
                                     <div class="card-body px py-5">
                                         <img src="/img/guidance-icon.png" alt="">
                                         <h3 class="h5 font-weight-normal h4 my-3">Learn Live</h3>
@@ -331,9 +331,9 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-6 col-sm-6 mb-4">
+                            <div class="col-lg-6 col-sm-6 mb-4"> -->
                                 <!-- Services Item-->
-                                <div class="card border-0 shadow rounded-lg text-left px-2">
+                                <!-- <div class="card border-0 shadow rounded-lg text-left px-2">
                                     <div class="card-body px py-5">
                                         <img src="/img/weekday-icon.png" alt="">
                                         <h3 class="h5 font-weight-normal h4 my-3">Quiz and weekly test</h3>
@@ -341,9 +341,9 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-6 col-sm-6 mb-4">
+                            <div class="col-lg-6 col-sm-6 mb-4"> -->
                                 <!-- Services Item-->
-                                <div class="card border-0 shadow rounded-lg text-left px-2">
+                                <!-- <div class="card border-0 shadow rounded-lg text-left px-2">
                                     <div class="card-body px py-5">
                                         <img src="/img/doubts-icon.png" alt="">
                                         <h3 class="h5 font-weight-normal h4 my-3">Prepare with India’s best tutor</h3>
@@ -351,9 +351,9 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-6 col-sm-6">
+                            <div class="col-lg-6 col-sm-6"> -->
                                 <!-- Services Item-->
-                                <div class="card border-0 shadow rounded-lg text-left px-2">
+                                <!-- <div class="card border-0 shadow rounded-lg text-left px-2">
                                     <div class="card-body px py-5">
                                         <img src="/img/classes-icon.png" alt="">
                                         <h3 class="h5 font-weight-normal h4 my-3">One-on-one
@@ -367,8 +367,8 @@
                 </div>
             </div>
         </section>
-    </section>
-    <section class="p-0" id="testimonials"
+    </section> -->
+    <!-- <section class="p-0" id="testimonials"
         style="background: url(img/testimonials-bg.png) no-repeat; background-size: 40% 100%; background-position: left center">
         <div class="container text-center">
          
@@ -436,7 +436,8 @@
                 </div>
             </div>
         </div>
-    </section><a class="scropll-top-btn" id="scrollTop" href="#"><i class="fas fa-long-arrow-alt-up"></i></a>
+    </section>-->
+    <a class="scropll-top-btn" id="scrollTop" href="#"><i class="fas fa-long-arrow-alt-up"></i></a>
     <footer class="with-pattern-1 position-relative">
         <div class="container section-padding-y">
             <div class="row">
