--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   </header>
 
   <!-- Hero Section-->
-  <section class="hero bg-top" id="hero" style=""><!--background: url(img/banner-4.png) no-repeat; background-size: 100% 80%-->
+  <section class="hero bg-top" id="hero"><!--background: url(img/banner-4.png) no-repeat; background-size: 100% 80%-->
     <div class="container">
       <div class="row py-5">
         <div class="col-lg-5 py-5">
@@ -124,11 +124,12 @@
   </section>
 
   
-  <h2 class=" text-primary" style="align-items: center;">Register </h2>
+
   <section class="bg-center py-0" id="about"
     style="background: url(.svg) no-repeat; background-size: cover">
     <section class="with-pattern-1" id="services">
       <div class="container">
+        <h2 class="text-primary"id="#registration" style="align-items: center;">Registration </h2>
         <div class="row align-items-center mb-5">
           <div class="col-lg-6 mb-5 mb-lg-0"><img class="img-fluid w-100 px-lg-5" src="undraw_pair_programming_njlp.svg"
               alt=""></div>
@@ -531,71 +532,84 @@
     </div>
   </section>
 
-  <section class="bg-center py-0">
+  <section class="with-pattern-1 py-2" id="services">
     <div class="container">
-      <div class="row align-items-center mb-5">
-  <div class="row align-items-center">
-    <div class="col-lg-6 mb-5 mb-lg-0">
-        <h2>Get started with Vidyayan Community</h2>
-        <p class="text-muted">Vidyayan provides you number of facilities.Join us and boost up your
-            knowledge..</p>
-        <ul class="list-check">
-            <li class="text-muted mb-2">NCERT books pdf</li>
-            <li class="text-muted mb-2">Weekly tests and quizes</li>
-            <li class="text-muted mb-2">Clear your doubt</li>
-        </ul>
-        <a class="btn btn-outline-dark" href="#" role="button">Join Now</a>
-    </div>
-    <div class="col-lg-6">
-        <div class="row">
-            <div class="col-lg-6 col-sm-6 mb-4">
-                <!-- Services Item-->
-                <div class="card border-0 shadow rounded-lg text-left px-2">
-                    <div class="card-body px py-5">
-                        <img src="/img/guidance-icon.png" alt="">
-                        <h3 class="h5 font-weight-normal h4 my-3">Learn Live</h3>
-                        <p class="text-small mb-0 text-muted"></p>
-                    </div>
-                </div>
+        <!-- <div class="row align-items-center mb-5">
+            <div class="col-lg-6 mb-5 mb-lg-0"><img class="img-fluid w-100 px-lg-5" src="img/objects.svg"
+                    alt="">
             </div>
-            <div class="col-lg-6 col-sm-6 mb-4">
-                <!-- Services Item-->
-                <div class="card border-0 shadow rounded-lg text-left px-2">
-                    <div class="card-body px py-5">
-                        <img src="/img/weekday-icon.png" alt="">
-                        <h3 class="h5 font-weight-normal h4 my-3">Quiz and weekly test</h3>
-                        <p class="text-small mb-0 text-muted"></p>
-                    </div>
-                </div>
+            <div class="col-lg-6">
+                <h2>The Best Coding Teachers now on your Fingertips</h2>
+                <p class="text-muted">Vidyayan provides you best Coding teachers. We will give you direction for
+                    smart
+                    learning.
+                    Let's progress together.</p>
+                <a class="btn btn-outline-dark" href="https://forms.gle/Zz7f7epQdmjs85Bo9" role="button">Join
+                    NOw</a>
             </div>
-            <div class="col-lg-6 col-sm-6 mb-4">
-                <!-- Services Item-->
-                <div class="card border-0 shadow rounded-lg text-left px-2">
-                    <div class="card-body px py-5">
-                        <img src="/img/doubts-icon.png" alt="">
-                        <h3 class="h5 font-weight-normal h4 my-3">Prepare with India’s best tutor</h3>
-                        <p class="text-small mb-0 text-muted">.</p>
-                    </div>
-                </div>
+        </div> -->
+        <div class="row align-items-center">
+            <div class="col-lg-6 mb-5 mb-lg-0">
+                <h2>Start your Coding with Vidyayan</h2>
+                <p class="text-muted">Vidyayan provides you number of facilities.Join us and boost up your
+                    Coding
+                    knowledge.</p>
+                <ul class="list-check">
+                    <li class="text-muted mb-2">Live and Recorded Videos</li>
+                    <li class="text-muted mb-2">Weekly tests and quizes</li>
+                    <li class="text-muted mb-2">Clear your doubt</li>
+                </ul>
+                <button class="btn btn-primary js-modal-btn" data-video-id="B6uuIHpFkuo"><i
+                        class="fas fa-play-circle mr-2"></i>Play video</button>
             </div>
-            <div class="col-lg-6 col-sm-6">
-                <!-- Services Item-->
-                <div class="card border-0 shadow rounded-lg text-left px-2">
-                    <div class="card-body px py-5">
-                        <img src="/img/classes-icon.png" alt="">
-                        <h3 class="h5 font-weight-normal h4 my-3">One-on-one
-                            mentor guidance</h3>
-                        <p class="text-small mb-0 text-muted"></p>
+            <div class="col-lg-6">
+                <div class="row">
+                    <div class="col-lg-6 col-sm-6 mb-4">
+                        <!-- Services Item-->
+                        <div class="card border-0 shadow rounded-lg text-left px-2">
+                            <div class="card-body px">
+                                <img src="/img/guidance-icon.png" alt="">
+                                <h3 class="h5 font-weight-normal h4 my-3">Learn Live</h3>
+                                <p class="text-small mb-0 text-muted"></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-sm-6 mb-4">
+                        <!-- Services Item-->
+                        <div class="card border-0 shadow rounded-lg text-left px-2">
+                            <div class="card-body px">
+                                <img src="/img/weekday-icon.png" alt="">
+                                <h3 class="h5 font-weight-normal h4 my-3">Quiz and weekly test</h3>
+                                <p class="text-small mb-0 text-muted"></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-sm-6 mb-4">
+                        <!-- Services Item-->
+                        <div class="card border-0 shadow rounded-lg text-left px-2">
+                            <div class="card-body px">
+                                <img src="/img/doubts-icon.png" alt="">
+                                <h3 class="h5 font-weight-normal h4 my-3">Prepare with India’s best tutor</h3>
+                                <p class="text-small mb-0 text-muted"></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-sm-6">
+                        <!-- Services Item-->
+                        <div class="card border-0 shadow rounded-lg text-left px-2">
+                            <div class="card-body px">
+                                <img src="/img/classes-icon.png" alt="">
+                                <h3 class="h5 font-weight-normal h4 my-3">One-on-one
+                                    mentor guidance</h3>
+                                <p class="text-small mb-0 text-muted"></p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-      </div>
-    </div>
 </section>
-  
   <section class="p-0" id="testimonials"
     style="background: url(img/testimonials-bg.png) no-repeat; background-size: 40% 100%; background-position: left center">
     <div class="container text-center">
