--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
       <section id="how-does-it-work">
         <div class="container">
           <div class="row">
-            <h2 class="section-heading">How <b>Does It Work?</b></h2>
+            <h2 class="section-heading text-primary">How <b>Does It Work?</b></h2>
             <p class="section-text"><b>Vidyayan Summer Of Code (VSoC) is a Vidyayan open source initiative that runs for three months. All enrolled participants in this Summer Of Code will have the unique chance to connect with Mentors and the Organizing Team. the mentors and the Organizing Team from 24th February 2021 to 28th February 2021.
             </p>
             <p class="section-text">In this period they will extract any help or can resolve any kind of query or uncertainty that they could be having regarding the projects or it’s implementation. The team and therefore the mentors will endeavour to supply the specified help from their absolute best resources.The mentors will declare the issues of the Open Source Projects beginning March 1st, and the admins will be in charge of the final structuring of the websites. If a participant wants to work on a project, he or she must comment on the problem and submit a pull request, and if the mentor approves the work, the participant will be given the chance to do so.</p>
@@ -475,7 +475,7 @@
 
       <!--mAP starts -->
       <hr>
-      <h2 class="mb-5">Vidyayan Community</h2>
+      <h2 class="mb-5 text-primary ">Vidyayan Community</h2>
 
 
       <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1rDiJsu0YAvPp16DKh5a9il-81FuUjFRy" width="100%"
@@ -492,7 +492,7 @@
 -->
       <hr>
 
-      <h2 class="mb-5">Get Vidyayan's Facilities</h2>
+      <h2 class="mb-5 text-primary">Get Vidyayan's Facilities</h2>
 
       <div class="row pb-5">
         <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
