--- a/team.html
+++ b/team.html
@@ -132,19 +132,20 @@
                             <div class="mx-3 mx-lg-5 my-5 pt-3">
                                 <div class="card shadow rounded-lg px-4 py-5 px-lg-5 with-pattern bg-white border-0">
                                     <div class="card-body index-forward pt-5 rounded-lg">
-                                        <div class="testimonial-img"><img class="rounded-circle" src="img/profile-2.jpg"
+                                        <div class="testimonial-img"><img class="rounded-circle" src="img/profile-3.png"
                                                 alt="" /></div>
                                         <!-- <p class="lead text-muted mb-5">Coding is becoming basic literacy in this
                                             digital age, and it is significant for kids to understand and utilize
                                             the technology around them</p> -->
-                                        <h5 class="font-weight-bold mb-0">Anshu Priya</h5>
-                                        <p class="text-primary mb-0 text-muted text-small">Tech Developer</p>
+                                        <h5 class="font-weight-bold mb-0">Rahul Kumar</h5>
+                                        <p class="text-primary mb-0 text-muted text-small font-weight-bold">Web Developer
+                                        </p>
                                         <ul class="list-inline-item-center mb-lg-0 my-3">
                                             <li class="list-inline-item"><a class="social-link"
                                                     href="https://www.facebook.com/vidyayan.edu"><i
                                                         class="fab fa-facebook-f"></i></a></li>
                                             <li class="list-inline-item"><a class="social-link"
-                                                    href="https://www.linkedin.com/company/vidyayan"><i
+                                                    href="https://www.linkedin.com/in/rahul-kumar-072"><i
                                                         class="fab fa-linkedin-in"></i></a>
                                             </li>
                                             <li class="list-inline-item"><a class="social-link"
@@ -166,7 +167,7 @@
                             <div class="mx-3 mx-lg-5 my-5 pt-3">
                                 <div class="card shadow rounded-lg px-4 py-5 px-lg-5 with-pattern bg-white border-0">
                                     <div class="card-body index-forward pt-5 rounded-lg">
-                                        <div class="testimonial-img"><img class="rounded-circle" src="img/avatar-1.jpg"
+                                        <div class="testimonial-img"><img class="rounded-circle" src="img/profile-2.jpg"
                                                 alt="" /></div>
                                         <!-- <p class="lead text-muted mb-5">Lorem ipsum dolor sit amet, consectetur
                                             adipisicing
@@ -174,7 +175,7 @@
                                             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
                                             minim
                                             veniam.</p> -->
-                                        <h5 class="font-weight-bold mb-0">Sarah Hudson</h5>
+                                        <h5 class="font-weight-bold mb-0">Anshu Priya</h5>
                                         <p class="text-primary mb-0 text-muted text-small">Tech Developer</p>
                                         <ul class="list-inline-item-center mb-lg-0 my-3">
                                             <li class="list-inline-item"><a class="social-link"
